# wash

./: .gitignore  Cargo.toml  Makefile  README.md  TODO
src/: ast.rs  builtins.rs  command.rs  constants.rs  controls.rs  env.rs  handlers.rs  input.rs  ioctl.rs  main.rs  reader.rs  script.rs  signal.rs  state.rs  termios.rs  types.rs  util.rs
